log_24_08_12
-------------------Log----------------24/08/12-18:31:44
Traceback (most recent call last):
  File "c:\Users\Loc\Desktop\new\flashcard_quiz\controller\sets.py", line 335, in get_all_questions_of_set
    ret['data']['name'] = questions_answers[0][0]
                          ~~~~~~~~~~~~~~~~~^^^
IndexError: list index out of range
 ---- get_all_questions_of_set
-------------------Log----------------24/08/12-18:32:46
Traceback (most recent call last):
  File "c:\Users\Loc\Desktop\new\flashcard_quiz\controller\sets.py", line 335, in get_all_questions_of_set
    ret['data']['name'] = questions_answers[0][0]
                          ~~~~~~~~~~~~~~~~~^^^
IndexError: list index out of range
 ---- get_all_questions_of_set
-------------------Log----------------24/08/12-19:29:32
Traceback (most recent call last):
  File "c:\Users\Loc\Desktop\new\flashcard_quiz\controller\sets.py", line 56, in create_set
    cursor.execute(query2, (user_id, datetime.datetime.now(), datetime.datetime.now(), False, False, name, description))
psycopg2.errors.SyntaxError: syntax error at or near "return"
LINE 2: ...'::timestamp, false, false, 'Test', 'Test Set 4') return id;
                                                             ^

 ---- create_new_set